--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -207,6 +207,7 @@
                         </div>
                         <div class="example-paths">
                             <a href="/hello-resteasy" class="path-link" target="_blank">GET /hello-resteasy</a>
+                            <a href="/todos" class="path-link" target="_blank">GET /todos</a>
                         </div>
                     </div>
 
